--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@kinde-oss/kinde-auth-nextjs": "^2.1.3",
+    "@lyket/react": "^2.1.0",
     "clsx": "^2.1.0",
     "firebase": "^10.7.1",
     "next": "14.0.4",
