--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "clsx": "^2.1.0",
     "firebase": "^10.7.1",
+    "firebase-admin": "^12.0.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
